ssp-instance/engine-helm-templates/statfulset.yaml
# Source: ibm-ssp-engine/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-ibm-ssp-engine
  labels:
    app.kubernetes.io/name: ibm-ssp-engine
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ibm-ssp-engine-1.2.3
    release: release-name
    author: IBM
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ibm-ssp-engine
      app.kubernetes.io/instance: release-name
      author: IBM
  serviceName: release-name-ibm-ssp-engine
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ibm-ssp-engine
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: ibm-ssp-engine-1.2.3
        release: release-name
        author: IBM

      annotations:        
        productID: "9b921dda8dd141bf8869ead1a790d4da"
        productName: "IBM Sterling Secure Proxy Certified Container"
        productVersion: "6.3.0"
        productMetric: "VIRTUAL_PROCESSOR_CORE"
        productChargedContainers: "All"

    spec:
      serviceAccountName: release-name-ibm-ssp-engine-serviceaccount
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext: 
        
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        supplementalGroups:
        - 5555
      affinity:        
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:      
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
          preferredDuringSchedulingIgnoredDuringExecution:        
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:  
          preferredDuringSchedulingIgnoredDuringExecution:        
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:  
          preferredDuringSchedulingIgnoredDuringExecution:
      containers:
      - name: release-name-ibm-ssp-engine
        image: "cp.icr.io/cp/ibm-ssp-engine/ssp-engine-docker-image:6.0.3.0.02"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /spinstall/IBM/SP
          name: engine-pvc
          subPath: ENGINE
        - mountPath: /engineConfig
          name: engine-config
        tty: true
        stdin: true
        securityContext:
            
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsUser: 1000

          # Set liveness probe to determine if engine is running
        livenessProbe:
          initialDelaySeconds: 200
          periodSeconds: 60
          timeoutSeconds: 30
          failureThreshold: 10
          exec:              
            command: 
            - bash
            - -c
            - monitorService.sh 63366
        # Set readiness probe to determine if engine is running
        readinessProbe: 
          initialDelaySeconds: 190
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 10
          exec:              
            command: 
            - bash
            - -c
            - monitorService.sh 63366              
        resources:
          limits:
              cpu: 1000m
              ephemeral-storage: 6Gi
              memory: 3Gi
          requests:
              cpu: 1000m
              ephemeral-storage: 4Gi
              memory: 3Gi
          
      # Create a volume which will be used while creating the container.
      # The volume claim needs to be created before using this volume.
      volumes:
      - name: engine-pvc
        persistentVolumeClaim:
          claimName: release-name-ibm-ssp-engine-pvc
      - name: engine-config 
        configMap:
          name: release-name-ibm-ssp-engine
      - name: engine-secret
        secret: 
          secretName:
